src/test/ui/generator/generator-region-requirements.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/generator-region-requirements.rs:12:51
   |
LL | fn dangle(x: &mut i32) -> &'static mut i32 {
   |              -------- the type of `x` does not have lifetime `'static'`
...
LL |             GeneratorState::Complete(c) => return c,
   |                                                   ^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
